# segeom

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  GeometricFault.sln  Point.h  README.md  Segeom  Segeom.cpp  SegeomConfig.h.in  Vector.h  mathUtils.cpp  mathUtils.h  utils.cpp  utils.h
GeometricFault/: GeometricFault.cpp  GeometricFault.vcxproj  GeometricFault.vcxproj.filters  Header.h  Point.h  Vector.h  mathUtils.cpp  mathUtils.h  utils.cpp  utils.h
GeometricFault/Primitives/: Point.h  PointND.h  Segment.h  Vector.h
Primitives/: Point.h  Point2D.h  PointND.cpp  PointND.h  Segment.h  Vector.h
Test/: .clang-format  BUILD  PointTest.cpp  Test.vcxproj  Test.vcxproj.filters  Testing.cpp  Testing.h  VectorTest.cpp  VectorTest.h  VectorUtils.cpp  pch.cpp  pch.h
Test/Primitives/: Point3DTest.cpp  PointNDTest.cpp  SegmentTest.cpp  VectorTest.cpp  VectorUtils.h  point_test.cpp  polygon_test.cc  segment_test.cpp  vector_test.cpp
Test/TestUtils/: CommonUtils.cpp  CommonUtils.h  PointUtils.cpp  PointUtils.h  SegmentUtils.h
Test/test_utils/: SegmentUtils.h  common_utils.cpp  common_utils.h  point_utils.cpp  point_utils.h  polygon_utils.cc  polygon_utils.h  segment_utils.cc  segment_utils.h  vector_utils.cc  vector_utils.h
Tests/: Tests.cpp  Tests.vcxproj
main/: BUILD  Segeom.cpp  exceptions.h  mathUtils.cpp  mathUtils.h  math_utils.h
main/Primitives/: .clang-format  Point.h  Point2D.h  Point3D.h  PointND.cpp  PointND.h  Segment.h  Vector.h  polygon.h
